<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/baseline_people_24"
        android:title="@string/title_social" />
    <item
        android:id="@+id/navigation_travel"
        android:icon="@drawable/baseline_card_travel_24"
        android:title="@string/title_travel" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />

</menu>