<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.travel_itinerary_planner.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.travel_itinerary_planner.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_social"
        android:name="com.example.travel_itinerary_planner.social.SocialFragment"
        android:label="@string/title_social"
        tools:layout="@layout/fragment_social" />
    <fragment
        android:id="@id/navigation_travel"
        android:name="com.example.travel_itinerary_planner.travel.TravelFragment"
        android:label="@string/title_travel"
        tools:layout="@layout/fragment_travel" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.travel_itinerary_planner.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>